--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,12 @@ jobs:
         uses: juliangruber/read-file-action@v1
         with:
             path: ./version
-      - name: Echo version file
-        run: echo ${{ steps.package.outputs.content }}
+      - name: set variable verion from version file
+        run: export VERSION ${{ steps.package.outputs.content }}
         # Runs a single command using the runners shell
       
       - name: Build a docker images
-        run: echo "NOMAN"
+        run: echo "NOMAN->$VERSION" 
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
