--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         with:
             path: ./version
       - name: set variable verion from version file
-        run: export VERSION ${{ steps.package.outputs.content }}
+        run: export VERSION=${{ steps.package.outputs.content }}
         # Runs a single command using the runners shell
       
       - name: Build a docker images
