--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,23 +22,15 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
       - name: Read package.json
         id: package
         uses: juliangruber/read-file-action@v1
         with:
-            path: ./version
-      - name: set variable verion from version file
-        run: export VERSION=${{ steps.package.outputs.content }}
-        # Runs a single command using the runners shell
-      
+          path: ./package.json
+      - name: Echo package.json
+        run: echo ${{ steps.package.outputs.content }}
+        
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2          
       - name: Build a docker images
-        run: echo "NOMAN->$VERSION" 
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        run: ./build-docker-image.sh ${{ steps.package.outputs.content }}
