--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,13 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Read version file to create a docker image with specified version
-        id: package
+        id: version
         uses: juliangruber/read-file-action@v1
         with:
           path: ./version
       - name: Echo version
-        run: echo ${{ steps.package.outputs.content }}
+        run: echo ${{ steps.version.outputs.content }}
+      
         
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2          
