--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,9 @@ jobs:
         with:
           path: ./version
       - name: Echo version
-        run: echo ${{ steps.version.outputs.content }}
+        run: |
+          ls
+          echo ${{ steps.version.outputs.content }}
       
         
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
