--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Run a one-line script
+        run: ls
       - name: Read version file
         id: version
         uses: juliangruber/read-file-action@v1
