--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Run a one-line script
-        run: ll && sudo apt install docker.io -y
+        run: sudo apt install docker.io -y
       - name: Read version file
         id: version
         uses: juliangruber/read-file-action@v1
         with:
-          path: ./version
+          path: ./springboot-docker-microk8s/version
       - name: Echo version from file
         run: echo ${{ steps.version.outputs.content }}
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
