--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,9 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:      
+    steps:
+      - name: Echo version from file
+        run: echo ls
       - name: Read version file
         id: version
         uses: juliangruber/read-file-action@v1
