--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Run a one-line script
         run: |
           ls
+          mvn clean install
       
       - name: Read version file
         id: version
