--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,12 @@ jobs:
       - name: Echo version from file
         run: echo ${{ steps.version.outputs.content }}
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it     
-        
+      
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          
       - name: Create docker build and tag
         run: ./build-docker-image.sh ${{ steps.version.outputs.content }}
